--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-     "start": "json-server --watch collections.json --port 9001"
+    "start": "npx json-server --watch collections.json --port 9001"
   },
   "keywords": [],
   "author": "",
