--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx json-server --watch collections.json --port 9001",
-    "install": "npm install json-server"
+    "start": "json-server --watch collections.json --port 8080"
   },
   "keywords": [],
   "author": "",
